# thunfisch

./: .gitignore  Cargo.toml  README.md  branch_diff.txt  config.yml  docker-compose.yaml  perftree.bat  perftree.sh  plot_performance.py  speedscope  tmp.md
.github/: Dockerfile
.github/workflows/: ci.yml  deploy-lichess.yml  elo-bench-pr-vs-main.yml  thunfisch.yml
docker/engine/: config.yml  thunfisch
docs/: Alpha Beta Pruning.md  History Heuristics.md  Iterative Deepening.md  Killer Heuristics.md  MVV-LVA Move Ordering.md  Minimax Algorithmus.md  Move Generation.md  Negamax.md  Opening Book.md  Piece Square Table Evaluation.md  Quiescene Search.md  README.md  Search Breakdown.md  Seldepth.md  TODO.md  Transposition Tables.md  UCI.md
docs/rudimentary_benchmarks/: Nodes visited threading vs no threading.md
docs/types/: Bit.md  Bitboard.md  Board.md  Figure vs Piece.md  Hub Types.md  Special Moves.md  Square vs Bit.md
old-binaries/: rusty-chess-bot-v9
python-debugging/: README.md  build-gen-v2.py  build-generator.py  build-logger.py  build-plotly.py  build-plotter.py  config.json  hashing.ipynb  plot_depth_time.html  plot_depth_time_table.md  print_legal_moves_custom.py  pyproject.toml  test.py
python-debugging/bin-base/: thunfisch
python-debugging/bin-features/: thunfisch
python-test/: README.md  autoperft.py  main.py  polyglot_hash.py  print_legal_moves.py  print_moves.py  promotion_erro_v2.py  promotion_error.py
src/: alle_rs_dateien.txt  alpha_beta.rs  communication.rs  debug.rs  evaluate.rs  evaluation.rs  evaluation_constants.rs  iterative_deepening.rs  legal_move_generation.rs  lib.rs  main.rs  make_move.rs  move_generation.rs  move_ordering.rs  move_picker.rs  move_scoring.rs  output.ps1  position_generation.rs  prelude.rs  pseudo_legal_move_generation.rs  quiescence_search.rs  search.rs  settings.rs  test.rs  time_management.rs  transposition_table.rs  types.rs  uci.rs  utils.rs
src/communication/: bestmove.rs  generate_board.rs  generate_fen.rs  mod.rs  parse_fen.rs  uci.rs
src/debug/: custom_commands.rs  mod.rs  perft.rs  visualize.rs
src/move_generator/: between.rs  blockers.rs  find_magics.rs  generator.rs  is_legal.rs  magic_array.rs  magics.rs  masks.rs  mod.rs  move_generator.rs  moves.rs  moves_counter.rs  moves_legacy.rs  normal_targets.rs  pin.rs  pinmask.rs  rand_xor_shift.rs  shifts.rs  sliding_targets.rs
src/search/: alpha_beta.rs  evaluate.rs  iterative_deepening.rs  mod.rs  move_ordering.rs  move_ordering_mvv_lva.rs  move_picker.rs  mvv_lva.rs  pv.rs  quiescence_search.rs  search_info.rs  transposition_table.rs
src/types/: bit.rs  bitboard.rs  board.rs  chess_move.rs  color.rs  color_piece.rs  decoded_move.rs  direction.rs  mod.rs  (+14 more)
testing/: bench-prev-current.sh  current  elo.sh  git-based-sprt.sh  pgn_to_uci.py  previous  pyproject.toml  sprt.sh  tournament.sh  uci_to_pgn.py
tests/: encoding.rs  selfplay.rs  test_checkmate.rs  test_ep.rs  test_move_generation.rs
tuning/: .gitignore  Cargo.toml  README.md
(+31 files in other folders)
