[package]
name = "thunfisch"
version = "0.1.0"
edition = "2024"

[features]
default = ["all"]
all = [
    "ab",
    "qs",
    "tt-ab",
    "tt-qs",
    "mvv-lva",
    "order-tt-mv-first",
    "tt-cuttoffs",
    "nmp",
    "rfp",
    "pvs",
    "killers",
]
all-no-killers = [
    "ab",
    "qs",
    "tt-ab",
    "tt-qs",
    "mvv-lva",
    "order-tt-mv-first",
    "tt-cuttoffs",
    "nmp",
    "rfp",
    "pvs",
]
ab = []
qs = []
tt-ab = []
tt-qs = []
mvv-lva = []
order-tt-mv-first = []
tt-cuttoffs = []
nmp = []
rfp = []
pvs = []
killers = []

[dependencies]
colored = "2"
rayon = "1.10.0"
num-format = "0.4.4"
arrayvec = "0.7.6"
once_cell = "1.21.3"
