[package]
name = "thunfisch"
description = "Thunfisch is a UCI-compatible chess engine written from scratch in Rust. It uses magic‐bitboard move generation, iterative deepening with alpha-beta and quiescence search and a transposition table."
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/Kaynoux/thunfisch"
authors = ["Lukas Piorek (Kaynoux)", "Emil Schläger (heofthetea)"]
keywords = ["chess"]
categories = ["games"]

[features]
default = ["all"]
all = [
    "ab",
    "qs",
    "tt-ab",
    "tt-qs",
    "mvv-lva",
    "order-tt-mv-first",
    "tt-cuttoffs",
    "nmp",
    "rfp",
    "pvs",
    "killers",
    "histories"
]
all-no-killers = [
    "ab",
    "qs",
    "tt-ab",
    "tt-qs",
    "mvv-lva",
    "order-tt-mv-first",
    "tt-cuttoffs",
    "nmp",
    "rfp",
    "pvs",
]
ab = []
qs = []
tt-ab = []
tt-qs = []
mvv-lva = []
order-tt-mv-first = []
tt-cuttoffs = []
nmp = []
rfp = []
pvs = []
killers = []
histories = []

[dependencies]
rayon = "1.11.0"
arrayvec = "0.7.6"


[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
# debug = true      # for flamegraphs
